--- a/index.html
+++ b/index.html
@@ -19,10 +19,8 @@
                 <div id="player-level-display" class="text-right"></div>
             </header>
             <div class="bg-gray-800/50 backdrop-blur-sm p-6 rounded-lg shadow-lg mb-8 text-center">
-                <h2 class="text-xl font-semibold mb-3">Curator's Dashboard</h2>
-                <p class="text-gray-400 mb-4">Manage your collection. Create new `.json` files in the `/cards` subdirectories.</p>
-                <button id="sync-library-btn" class="bg-purple-600 hover:bg-purple-700 text-white font-bold py-2 px-6 rounded-md transition-colors duration-300">Sync Library</button>
-                 <p id="sync-status" class="text-sm text-gray-400 mt-2 h-4"></p>
+                <button id="sync-library-btn" class="bg-purple-600 hover:bg-purple-700 text-white font-bold py-3 px-8 rounded-md text-xl transition-colors duration-300">Sync Library</button>
+                <p id="sync-status" class="text-sm text-gray-400 mt-3 h-5"></p>
             </div>
             <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mb-8">
                 <div class="bg-gray-800/50 backdrop-blur-sm p-4 rounded-lg shadow-lg text-center"><h3 class="text-gray-400 text-sm font-medium">Total Cards</h3><p id="kpi-total-cards" class="text-3xl font-bold">0</p></div>
